# XJEngine

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
Core/: CMakeLists.txt
Core/Private/: XJApplication.cpp
Core/Private/Asset/: XJAssetManager.cpp  XJAssetRef.cpp  XJAssetRegistry.cpp  XJSceneAsset.cpp  XJSceneRuntimeUtil.cpp
Core/Private/Asset/Importer/: XJGltfImporter.cpp  XJMaterialImporter.cpp  XJModelImporter.cpp  XJTextureImporter.cpp
Core/Private/Asset/Instantiation/: XJSceneInstantiator.cpp
Core/Private/Asset/Loader/: XJMeshAssetLoader.cpp
Core/Private/Asset/Register/: XJAssetBootstrap.cpp  XJAssetRegistryScanner.cpp
Core/Private/Asset/Serialization/: XJMaterialAssetSerializer.cpp  XJSceneAssetSerializer.cpp  XJSceneSerialization.cpp  XJShaderAssetSerializer.cpp  XJShaderSchemaSerializer.cpp
Core/Private/Camera/: XJCameraController.cpp
Core/Private/ECS/: XJEntity.cpp  XJNode.cpp  XJScene.cpp  XJUUID.cpp
Core/Private/ECS/Component/: XJCameraComponent.cpp
Core/Private/ECS/System/: XJBaseMaterialSystem.cpp  XJCameraControllerSystem.cpp  XJCameraSystem.cpp  XJMaterialSystem.cpp  XJUnlitMaterialSystem.cpp
Core/Private/Render/: XJMaterial.cpp  XJMesh.cpp  XJRenderContext.cpp  XJRenderTarget.cpp  XJRenderer.cpp  XJSampler.cpp  XJTexture.cpp
Core/Private/Render/Material/: XJMaterialParameterBlock.cpp  XJMaterialParameterBlockBuilder.cpp  XJMaterialParameterBlockWriter.cpp  XJMaterialParameterLayout.cpp  XJMaterialPipelineRuntimeBuilder.cpp  XJMaterialPipelineRuntimeCache.cpp  XJMaterialPipelineRuntimeDescriptor.cpp  XJMaterialRuntimeUploader.cpp  XJUnlitMaterialRenderItemBuilder.cpp
Core/Private/Render/Resource/: XJMaterial.cpp  XJMaterialFactory.cpp  XJMesh.cpp  XJMeshFactory.cpp  XJTexture.cpp  XJTextureFactory.cpp
Core/Private/Render/Shader/: XJShaderReflector.cpp  XJShaderSchemaValidator.cpp
Core/Private/Render/System/: XJBaseMaterialSystem.cpp  XJMaterialRenderSystemBase.cpp  XJMaterialSystem.cpp  XJUnlitMaterialSystem.cpp
Core/Public/: XJApplication.h  XJApplicationContext.h  XJEntryPoint.h
Core/Public/Asset/: XJAsset.h  XJAssetManager.h  XJAssetPathUtils.h  XJAssetRef.h  XJAssetRegistry.h  XJMaterialAsset.h  XJMeshAsset.h  XJSceneAsset.h  XJSceneRuntimeUtil.h  XJTextureAsset.h
Core/Public/Asset/Importer/: XJGltfImporter.h  XJMaterialImporter.h  XJModelImporter.h  XJTextureImporter.h
Core/Public/Asset/Instantiation/: XJSceneInstantiator.h
Core/Public/Asset/Loader/: XJMeshAssetLoader.h
Core/Public/Asset/Register/: XJAssetBootstrap.h  XJAssetRegistryScanner.h
Core/Public/Asset/Serialization/: XJMaterialAssetSerializer.h  XJPrefabSerialization.h  XJSceneAssetSerializer.h  XJSceneSerialization.h  XJShaderAssetSerializer.h  XJShaderSchemaSerializer.h
Core/Public/Camera/: XJCameraController.h
Core/Public/ECS/: XJComponent.h  XJEntity.h  XJNode.h  XJScene.h  XJSystem.h  XJUUID.h
Core/Public/ECS/Component/: XJBaseMaterialComponent.h  XJCameraComponent.h  XJMeshComponent.h  XJSceneAssetComponents.h  XJTransformComponent.h
Core/Public/ECS/System/: XJBaseMaterialSystem.h  XJCameraControllerSystem.h  XJCameraSystem.h  XJMaterialSystem.h  XJUnlitMaterialSystem.h
Core/Public/Render/: XJMaterial.h  XJMesh.h  XJRenderContext.h  XJRenderTarget.h  XJRenderer.h  XJSampler.h  XJTexture.h
Core/Public/Render/Material/: XJMaterialBuildResultUtils.h  XJMaterialParameterBlock.h  XJMaterialParameterBlockBuilder.h  XJMaterialParameterBlockWriter.h  XJMaterialParameterLayout.h  XJMaterialPipelineRuntime.h  XJMaterialPipelineRuntimeBuilder.h  XJMaterialPipelineRuntimeCache.h  XJMaterialPipelineRuntimeDescriptor.h  XJMaterialRenderItem.h  XJMaterialRuntimeUploader.h  (+4 more)
Editor/: CMakeLists.txt
Editor/Private/Controllers/: XJEditorAssetController.cpp  XJEditorCameraController.cpp  XJEditorCameraManager.cpp  XJEditorExternalDropController.cpp  XJEditorSceneAssetDropController.cpp  XJEditorSceneController.cpp
Editor/Private/Services/: XJEditorAssetService.cpp  XJEditorSceneService.cpp
Editor/Private/UI/: XJEditorLog.cpp  XJEditorRenderer.cpp  XJEditorUIConfig.cpp  XJEditorUILayer.cpp  XJUIContext.cpp
Editor/Public/Controllers/: XJEditorAssetController.h  XJEditorCameraController.h  XJEditorCameraManager.h  XJEditorExternalDropController.h  XJEditorSceneAssetDropController.h  XJEditorSceneController.h
Editor/Public/Services/: XJEditorAssetService.h  XJEditorSceneService.h
Editor/Public/UI/: XJEditorAssetDragPayload.h  XJEditorAssetRequests.h  XJEditorComponentTypes.h  XJEditorDragPayload.h  XJEditorLog.h  XJEditorMaterialTypes.h  XJEditorRenderer.h  XJEditorSceneViewModel.h  XJEditorSelection.h  XJEditorUIConfig.h  XJEditorUILayer.h  XJEditorUIState.h  XJUIContext.h
Editor/cmake/: FindVulkanDLLs.cmake  SPIR-V.cmake
Platform/: CMakeLists.txt
Platform/Private/: XJEngine.cpp
Platform/Private/Edit/: SpdlogDebug.cpp  XJEventTesting.cpp  XJGlfwWindow.cpp
Platform/Private/Event/: XJEventDispatcher.cpp
Platform/Private/Graphic/: VulkanImageView.cpp  VulkanInstance.cpp  VulkanPhysicalDevices.cpp  VulkanQueue.cpp  VulkanSurface.cpp  XJVulkanAddModelAssets.cpp  XJVulkanBuffer.cpp  XJVulkanCommandBuffer.cpp  XJVulkanDepthImage.cpp  XJVulkanDescriptorSet.cpp  XJVulkanDevice.cpp  XJVulkanFrameBuffer.cpp  XJVulkanGeometryUtil.cpp  XJVulkanImage.cpp  XJVulkanPipeline.cpp  XJVulkanRenderPass.cpp  XJVulkanSwapchain.cpp  XJVulkanTextureSampler.cpp
Platform/Public/: XJEngine.h
Platform/Public/Edit/: EditIncludes.h  FileUtil.h  Mathinclude.h  SpdlogDebug.h  XJEventTesting.h  XJGlfwWindow.h
Platform/Public/Event/: XJEvent.h  XJEventDispatcher.h  XJEventObserver.h  XJKeyEvent.h  XJMouseEvent.h  XJWindowEvent.h
Platform/Public/Graphic/: VulkanCommon.h  VulkanImageView.h  VulkanInstance.h  VulkanPhysicalDevices.h  VulkanQueue.h  VulkanSurface.h  XJVulkanAddModelAssets.h  XJVulkanBuffer.h  XJVulkanCommandBuffer.h  XJVulkanDepthImage.h  XJVulkanDescriptorSet.h  XJVulkanDevice.h  XJVulkanFrameBuffer.h  XJVulkanGeometryUtil.h  XJVulkanImage.h  XJVulkanPipeline.h  XJVulkanRenderPass.h  XJVulkanSwapchain.h  XJVulkanTextureSampler.h
Src/: main.cpp
(+58 files in other folders)
